--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,13 +211,15 @@ nav a:hover {
   color: #404b4a;
 }
 
-/* About Photo Hover effect*/
-.myphoto:hover {
-  -ms-transform: rotate(-15deg);
-  -webkit-transform: rotate(-15deg);
-  -moz-transform: rotate(-15deg);
-  -o-transform: rotate(-15deg);
-	transform: rotate(-15deg);
+
+/* Abuot Photo Hover Spin effect*/
+.myphoto { transition: all 0.3s ease-in-out 0s; }
+
+.myphoto:hover
+{
+    cursor: default;
+    transform: rotate(360deg);
+    transition: all 0.3s ease-in-out 0s;
 }
 
 
@@ -233,13 +235,6 @@ nav a:hover {
 
 	}
 
-	/* Styling for the content box */
-/* 	.box {
-		background-color: #ffffff;
-		padding: 30px;
-		border: 1px solid #dddddd;
-	} */
-
 	#content {
 		float: left;
 		width: 100%;
@@ -248,16 +243,7 @@ nav a:hover {
 
 
 
-
-
 @media screen and (max-width: 768px) {
-
-/* 	header {
-		background-color: #308654;
-		margin-bottom: 40px;
-		border-bottom: 2px solid #cccccc;
-	
-	} */
 
 	.wrapper{	
 		/* background-color: red; */
@@ -266,18 +252,10 @@ nav a:hover {
 
 	}
 
-	/* Styling for the content box */
-/* 	.box {
-		background-color: #ffffff;
-		padding: 30px;
-		border: 1px solid #dddddd;
-	} */
-
 	#content {
 		float: left;
 		width: 100%;
 	}
-
 
 
 
@@ -324,83 +302,4 @@ nav a:hover {
 			width: 100%;
 		}
 	
-
-
-
-
-
-
-
-
-
-/* 
-
-	.left_content {
-
-    float: left;
-
-    width: 625px;
-
-    margin-left: 45px;
-
-  }
-
-  .right_content {
-
-    float: left;
-
-    width: 665px;
-
-    height: 200px;
-
-    margin-left: 45px;
-
-    padding: 0;
-
-    margin-bottom: -150px;
-
-  }
-
-  .right_content i {
-
-    margin-left: 110px;
-
-  }
-
-  .cover, .portfolio_images {
-
-    width: 275px;
-
-    height:225px;
-
-    margin-left: 10px;
-
-  }
-
-  .banner {
-
-    width: 275px;
-
-    margin-left: 10px;
-
-  }
-
-  .field {
-
-    max-width: 600px;
-
-  }
-
-  textarea {
-
-    min-width: 600px;
-
-    max-width: 600px;
-
-    max-height: 175px;
-
-    min-height: 125px;  
-
-  } */
-
 }
