Final CSS Update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,7 +226,7 @@ nav a:hover {
 
 
 
-/* Media queries added to correctly render page content at screen resolution breaks of 980px, 768px & 640px. */
+/***  Responsive - Media queries added to correctly render page content at screen resolution breaks of 980px, 768px & 640px. ***/
 
 
 /* Sized for screens up to 980 pxels. */
